feat: update golang-github-rwcarlsen-goexif to 0.0_git20190401.9e8deec
Decode embedded EXIF meta data from image files with Go

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/552
Log: update repo

--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,9 @@
 #!/usr/bin/make -f
 
+export DH_GOLANG_INSTALL_EXTRA := exif/samples exif/sample1.jpg exif/corrupt tiff/sample1.tif
+
 %:
-	dh $@
+	dh $@ --buildsystem=golang --with=golang
+
+override_dh_auto_install:
+	dh_auto_install -- --no-binaries
